--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -288,6 +288,11 @@ body:hover .visually-hidden button {
   .fa-xing-square {
     color: $xing-color;
   }
+
+  .fa-quora,
+  .fa-quora-square {
+    color: $quora-color;
+  }
 }
 
 /*
