--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -76,34 +76,43 @@
         </li>
       {% endif %}
 
-      {% if author.twitter %}
+      {% if author.linkedin %}
         <li>
-          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs">
-            <i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter
+          <a href="https://www.linkedin.com/in/{{ author.linkedin }}" itemprop="sameAs">
+            <i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i> LinkedIn
+          </a>
+        </li>
+      {% endif %}
+      
+      {% if author.github %}
+        <li>
+          <a href="https://github.com/{{ author.github }}" itemprop="sameAs">
+            <i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub
           </a>
         </li>
       {% endif %}
 
-      {% if author.facebook %}
+      <!-- {% if author.facebook %}
         <li>
           <a href="https://www.facebook.com/{{ author.facebook }}" itemprop="sameAs">
             <i class="fa fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook
           </a>
         </li>
-      {% endif %}
+      {% endif %} -->
 
-      {% if author.google_plus %}
+     <!--  {% if author.twitter %}
         <li>
-          <a href="https://plus.google.com/{{ author.google_plus }}" itemprop="sameAs">
-            <i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i> Google+
+          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs">
+            <i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter
           </a>
         </li>
-      {% endif %}
+      {% endif %} -->
 
-      {% if author.linkedin %}
+      {% if author.google_plus %}
+
         <li>
-          <a href="https://www.linkedin.com/in/{{ author.linkedin }}" itemprop="sameAs">
-            <i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i> LinkedIn
+          <a href="https://plus.google.com/+{{ author.google_plus }}" itemprop="sameAs">
+            <i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i> Google+
           </a>
         </li>
       {% endif %}
@@ -132,18 +141,18 @@
         </li>
       {% endif %}
 
+      <!-- {% if author.quora %}
+        <li>
+          <a href="https://www.quora.com/profile/{{ author.quora }}" itemprop="sameAs">
+            <i class="fa fa-fw fa-quora" aria-hidden="true"></i> Quora
+          </a>
+        </li>
+      {% endif %} -->
+
       {% if author.bitbucket %}
         <li>
           <a href="https://bitbucket.org/{{ author.bitbucket }}" itemprop="sameAs">
             <i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket
-          </a>
-        </li>
-      {% endif %}
-
-      {% if author.github %}
-        <li>
-          <a href="https://github.com/{{ author.github }}" itemprop="sameAs">
-            <i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub
           </a>
         </li>
       {% endif %}
