--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,4 +29,5 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+
+<div class="page__footer-copyright"> <b> &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</b> Maintained with :heart: and no :coffee: </div>
