--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -51,7 +51,7 @@
 
 .page__footer-copyright {
   font-family: $global-font-family;
-  font-size: $type-size-7;
+  font-size: $type-size-6;
 }
 
 .page__footer-follow {
@@ -59,6 +59,7 @@
   ul {
     margin: 0;
     padding: 0;
+    padding-bottom: 10px;
     list-style-type: none;
   }
 
