--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -59,8 +59,8 @@
   ul {
     margin: 0;
     padding: 0;
-    padding-bottom: 10px;
     list-style-type: none;
+    padding-bottom: 10x;
   }
 
   li {
