Change font and update theme

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <!-- end custom head snippets -->
