--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -27,10 +27,11 @@ $times                        : Times, serif !default;
 $bodoni                       : "Bodoni MT", serif !default;
 $calisto                      : "Calisto MT", serif !default;
 $garamond                     : Garamond, serif !default;
+$lato                         : -apple-system, "Lato" !default;
 
-$global-font-family           : $sans-serif !default;
-$header-font-family           : $sans-serif !default;
-$caption-font-family          : $serif !default;
+$global-font-family           : $lato !default;
+$header-font-family           : $lato !default;
+$caption-font-family          : $lato !default;
 
 /* type scale */
 $type-size-1                  : 2.441em !default;  // ~39.056px
