--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -3,11 +3,11 @@
    ========================================================================== */
 
 /* Colors */
-$text-color: #000 !default;
+$text-color: #222 !default;
 $muted-text-color: $text-color !default;
-$primary-color: #ff0000 !default;
+$primary-color: #7a8288 !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
-$footer-background-color: #000 !default;
+$footer-background-color: #F2F3F3 !default;
 $link-color: #0000ff !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
@@ -25,10 +25,10 @@ $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
   }
 }
 
-.page__footer {
-  color: #fff !important; // override
-}
+// .page__footer {
+//   color: #fff !important; // override
+// }
 
-.page__footer-follow .social-icons .fa {
-  color: inherit;
-}
+// .page__footer-follow .social-icons .fa {
+//   color: inherit;
+// }
