Visible tag in action
FIXME: The pagination doesn't actually skip the posts
for now. Ex: If 3 of the posts are not visible, then
instead of 6 only posts are showed on the page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,9 @@ layout: archive
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% for post in paginator.posts %}
-  {% include archive-single.html %}
+  {% if post.visible %}
+  	{% include archive-single.html %}
+  {% endif %}
 {% endfor %}
 
 {% include paginator.html %}
