Update cm links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,9 @@
   </ul>
 </div>
 
-<p class="extra"><em>Take help from developers like me on Codementor (for free 10$ credits, you can use <b><a href="https://www.codementor.io/?partner=satwikkansal">this referral link</a></b>).</em>
+*PS: For consulting, you can reach out to me via Codementor (use [this link](https://www.codementor.io/satwikkansal?partner=satwikkansal) for free 10$ credits).*
+
+<p class="extra"><em>For consulting, you can reach out to me via Codementor (use <b><a href="https://www.codementor.io/satwikkansal?partner=satwikkansal">this link</a> for free 10$ credits).</em>
 </p>
 
 <div class="page__footer-copyright"> <b> &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</b> Maintained with :heart: and no :coffee: </div>
