Update cm links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,9 +29,7 @@
   </ul>
 </div>
 
-*PS: For consulting, you can reach out to me via Codementor (use [this link](https://www.codementor.io/satwikkansal?partner=satwikkansal) for free 10$ credits).*
-
-<p class="extra"><em>For consulting, you can reach out to me via Codementor (use <b><a href="https://www.codementor.io/satwikkansal?partner=satwikkansal">this link</a> for free 10$ credits).</em>
+<p class="extra"><em>For consulting, you can reach out to me via Codementor (use <b><a href="https://www.codementor.io/satwikkansal?partner=satwikkansal">this link</a></b> for free 10$ credits).</em>
 </p>
 
 <div class="page__footer-copyright"> <b> &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</b> Maintained with :heart: and no :coffee: </div>
